--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,6 @@ yarn-error.log
 ###< symfony/webpack-encore-bundle ###
 
 ###> liip/imagine-bundle ###
-/public/media/cache/
+/public/media/cache
 ###< liip/imagine-bundle ###
+/public/images/postscache/
