--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
         "@symfony/stimulus-bridge": "^2.0.0",
         "@symfony/webpack-encore": "^1.0.0",
         "core-js": "^3.0.0",
+        "jquery": "^3.5.1",
+        "popper.js": "^1.16.1",
         "regenerator-runtime": "^0.13.2",
         "sass": "^1.32.8",
         "stimulus": "^2.0.0",
